@@ -42,9 +42,15 @@ int digi_get_picture_width             (CameraPrivateLibrary *, int entry);
 int digi_is_clip                       (CameraPrivateLibrary *, int entry);
 int digi_decompress (unsigned char *out_data, unsigned char *data, 
 							    int w, int h);
-int digi_postprocess	(CameraPrivateLibrary *priv, 
-				int width, int height, 
-				unsigned char* rgb, int n);
+int digi_postprocess	(int width, int height, unsigned char* rgb);
 int digi_delete_all	(GPPort *, CameraPrivateLibrary *priv);
+
+int
+histogram (unsigned char *data, unsigned int size, int *htable_r, 
+						int *htable_g, int *htable_b);
+int
+white_balance (unsigned char *data, unsigned int size, float saturation);
+
+
 #endif
 
